# Mneme-Education-Ecosystem

./: .editorconfig  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  mneme.example.yaml  pyproject.toml  requirements.txt  setup.py
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml
docs/: ARCHITECTURE.md  BENCHMARK.md  CACHING.md  ECOSYSTEM.md  EXTENDING.md  FAQ.md  NOTE_TEMPLATES.md  TROUBLESHOOTING.md  prompt_design.md
examples/: basic_usage.py  custom_embedding_backend.py  custom_llm_backend.py  labelled_cards.jsonl  sample.md  train_difficulty_classifier.py
frontend/: .env.example  .gitignore  README.md  next.config.mjs  package-lock.json  package.json  tailwind.config.ts  tsconfig.json  vitest.config.ts
frontend/__tests__/: card-variants.test.ts  fsrs.test.ts  i18n.test.ts  import.test.ts  markdown.test.ts  schedule.test.ts  search-index.test.ts  stats.test.ts  validate.test.ts  voice-only.test.ts
frontend/app/: error.tsx  global-error.tsx  globals.css  layout.tsx  page.tsx
frontend/app/about/: page.tsx
frontend/app/cards/: page.tsx
frontend/app/compare/: page.tsx
frontend/app/duplicates/: page.tsx
frontend/app/feed/: page.tsx
frontend/app/generator/: page.tsx
frontend/app/help/: page.tsx
frontend/app/import/: page.tsx
frontend/app/insights/: page.tsx
frontend/app/learn/: page.tsx
frontend/app/mistakes/: page.tsx
frontend/app/search/: page.tsx
frontend/app/showcase/: page.tsx
frontend/app/study/: page.tsx
frontend/app/today/: page.tsx
frontend/components/: achievements-panel.tsx  add-card-dialog.tsx  ankiconnect-button.tsx  app-boot.tsx  bulk-actions-bar.tsx  bulk-edit-shell.tsx  calendar-forecast.tsx  card-edit-dialog.tsx  card-media.tsx  card-preview-list.tsx  card-quality-panel.tsx  card-stats-panel.tsx  certificate.tsx  chains-panel.tsx  chat-panel.tsx  code-sandbox.tsx  collections-panel.tsx  command-palette.tsx  concept-map.tsx  confidence-rating.tsx  course-shell.tsx  custom-achievements-section.tsx  custom-css-section.tsx  daily-challenge.tsx  daily-spotlight.tsx  deck-banner-picker.tsx  deck-card.tsx  deck-compare-shell.tsx  deck-detail-shell.tsx  deck-export-menu.tsx  deck-merge-dialog.tsx  deck-split-dialog.tsx  deck-summary.tsx  deck-theme-picker.tsx  dedup-panel.tsx  demo-shell.tsx  drawing-pad.tsx  duplicates-shell.tsx  ecosystem-map.tsx  empty-state.tsx  (+87 more)
frontend/components/study-modes/: cloze-mode.tsx  cram-mode.tsx  flip-mode.tsx  listen-mode.tsx  match-mode.tsx  quiz-mode.tsx  speed-mode.tsx  test-mode.tsx  tutor-mode.tsx  voice-only-mode.tsx  write-mode.tsx
frontend/lib/: achievements.ts  anchors.ts  ankiconnect.ts  api.ts  backup.ts  break-detector.ts  card-chains.ts  card-quality.ts  card-ratings.ts  card-templates.ts  card-variants.ts  cards.ts  chat-store.ts  code-runner.ts  collections.ts  confetti.ts  confidence.ts  config.ts  course.ts  custom-achievements.ts  custom-cards.ts  custom-css.ts  deck-banner.ts  deck-report.ts  deck-signature.ts  deck-store.ts  deck-theme.ts  duplicates.ts  edit-history.ts  exam-plan.ts  exam-readiness.ts  export.ts  fsrs.ts  highlight-review.ts  highlights.ts  hints.ts  hooks.ts  i18n.ts  ics.ts  import.ts  (+45 more)
frontend/public/: manifest.json  sw.js
results/: photosynthesis.summary.json
scripts/: dev.sh
src/mneme/: __init__.py  __main__.py  cli.py  config.py  diagnostics.py  pipeline.py  types.py
src/mneme/anki/: __init__.py  (+3 more)
tests/: conftest.py  test_anki_templates.py  test_apkg.py  test_cache.py  test_cache_cli.py  test_chunker.py  test_cli.py  test_cloze_generator.py  test_config.py  test_deduplicate.py  test_diagnostics.py  test_difficulty.py  test_extraction.py  test_generator.py  test_llm_parsing.py  test_pipeline.py  test_quality.py  test_quality_new_rules.py  test_server_api.py  test_server_safety.py  test_types.py
(+59 files in other folders)
